work on databinding for new records

--- a/git/formuladb-env/frmdb-apps/formuladb-io/index.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/index.html
@@ -553,7 +553,7 @@
         </div>
     </section>
     <div class="modal" id="frmdbModal" style="display: none;" aria-hidden="true">
-        <div data-frmdb-record="WishListRequest~~__FRMDB_NEW_RECORD__" style="display: initial" role="dialog" tabindex="-1" class="modal" id="frmdbModal">
+        <div data-frmdb-record="WishListRequest~~$FRMDB_NEW_RECORD" style="display: initial" role="dialog" tabindex="-1" class="modal" id="frmdbModal">
             <div role="document" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
