--- a/git/formuladb-env/frmdb-apps/formuladb-io/add__WishListRequest.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/add__WishListRequest.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" role="dialog" style="display: initial" data-frmdb-record="WishListRequest~~__FRMDB_NEW_RECORD__">
+<div class="modal" tabindex="-1" role="dialog" style="display: initial" data-frmdb-record="WishListRequest~~$FRMDB_NEW_RECORD">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
