--- a/git/formuladb-env/frmdb-apps/hotel-booking/_head.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_head.html
@@ -1,7 +1,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>King Hotel</title>
+<title>King Hotel Booking Page</title>
 <link rel="stylesheet" href="./formuladb-look.css">
 <link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
