fix img editing inside the data grid

--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -76,7 +76,7 @@
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
                 <div class="card-deck frmdb-cards-3">
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~07-Ball">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/interior-2685521_1920.jpg')"></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/02\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Ball Room</h5>
                             <h6>Card 1 subtitle</h6>
@@ -92,7 +92,7 @@
                         </frmdb-t-card-note>
                     </frmdb-t-card-media-main>
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~06-Conference">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/living-room-581073_1920.jpg')"></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/facilites_bg\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Conference Room</h5>
                             <h6>Card 1 subtitle</h6>
@@ -108,7 +108,7 @@
                         </frmdb-t-card-note>
                     </frmdb-t-card-media-main>
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~05-EconomySigle">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('theme/image/bedroom-1872196_1920.jpg')"></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/bedroom-1872196_1920\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Economy Sigle</h5>
                             <h6>Card 1 subtitle</h6>
@@ -129,6 +129,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
