modifs on booking, added $System_Param, ci docker cleanup

--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -76,14 +76,14 @@
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
                 <div class="card-deck frmdb-cards-3">
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~07-Ball">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/02\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/room4\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture" data-frmdb-pending=""></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Ball Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <frmdb-t-card-action class="">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)" class="">Choose</a>
                         </frmdb-t-card-action>
                         <frmdb-t-card-note class="">
                             <span>INFO 
@@ -92,14 +92,14 @@
                         </frmdb-t-card-note>
                     </frmdb-t-card-media-main>
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~06-Conference">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/facilites_bg\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/facilites_bg\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture" data-frmdb-pending=""></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Conference Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <frmdb-t-card-action class="">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)" class="">Choose</a>
                         </frmdb-t-card-action>
                         <frmdb-t-card-note class="">
                             <span>INFO 
@@ -108,14 +108,14 @@
                         </frmdb-t-card-note>
                     </frmdb-t-card-media-main>
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~05-EconomySigle">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/bedroom-1872196_1920\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/bedroom-1872196_1920\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture" data-frmdb-pending=""></frmdb-t-img>
                         <div class="card-body">
                             <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Economy Sigle</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
                         <frmdb-t-card-action class="">
-                            <a href="javascript:void(0)" class="">Action</a>
+                            <a href="javascript:void(0)" class="">Choose</a>
                         </frmdb-t-card-action>
                         <frmdb-t-card-note class="">
                             <span>INFO 
