--- a/git/formuladb-env/frmdb-apps/base-app/_head.html
+++ b/git/formuladb-env/frmdb-apps/base-app/_head.html
@@ -2,11 +2,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="./favicon.svg">
-<title>Blog Post Example Page</title>
+<title>FormulaDB Themes</title>
 <link rel="stylesheet" href="./formuladb-look.css">
 <link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
-<meta name="author" content="alex">
-<meta name="description" content="Blog post example page to be used when adding new blog post pages">
+<meta name="author" content="">
+<meta name="description" content="">
 <meta name="frmdb_display_date" content="">
 </head>
