--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -15,7 +15,7 @@
         <div class="button-bar flex-grow-0 d-flex">
             <frmdb-formula-editor></frmdb-formula-editor>
 
-            <frmdb-table-editor></frmdb-table-editor>
+            <frmdb-table-editor data-frmdb-attr="table-name:selectedTableId"></frmdb-table-editor>
 
             <div class="btn-group mr-3" role="group">
                 <button class="btn btn-light" title="Undo most recent change" id="undo-btn" data-frmdb-action="undo" data-vvveb-shortcut="ctrl+z">
