raw attr editor

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <div class="left-panel border-right shadow frmdb-dropdown-hover">
+    <div class="left-panel border-right shadow overflow-auto">
         <div class="d-flex justify-content-between"
             style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
             <img id="logo" src="/formuladb/img/logo.png" style="width: 90px; height: 28px;" />
