editor for raw attributes; fix specs

--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -24,7 +24,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <div class="input-group date">
-                                        <input type="date" class="form-control" placeholder="Arrival Date" required="" name="$FRMDB.PageParameters.new_room_booking.start_date" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.start_date" title="" data-frmdb-pending="">
+                                        <input type="date" class="form-control" placeholder="Arrival Date" required="" name="$FRMDB.PageParameters.new_room_booking.start_date" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.start_date" title="">
                                         <div class="input-group-append">
                                             <span class="input-group-text">
                                                 <i class="frmdb-i-calendar" aria-hidden="true"></i>
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group date">
-                                        <input type="date" class="form-control" placeholder="Departure Date" required="" name="$FRMDB.PageParameters.new_room_booking.end_date" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.end_date" title="" data-frmdb-pending="">
+                                        <input type="date" class="form-control" placeholder="Departure Date" required="" name="$FRMDB.PageParameters.new_room_booking.end_date" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.end_date" title="">
                                         <div class="input-group-append">
                                             <span class="input-group-text">
                                                 <i class="frmdb-i-calendar" aria-hidden="true"></i>
@@ -46,12 +46,12 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Nb Adults" required="" max="4" name="$FRMDB.PageParameters.new_room_booking.nb_adults" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.nb_adults" title="" data-frmdb-pending="">
+                                        <input type="number" class="form-control" placeholder="Nb Adults" required="" max="4" name="$FRMDB.PageParameters.new_room_booking.nb_adults" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.nb_adults" title="">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="number" class="form-control" title="Nb Children" value="0" name="$FRMDB.PageParameters.new_room_booking.nb_children" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.nb_children" data-frmdb-pending="">
+                                        <input type="number" class="form-control" title="Nb Children" value="0" name="$FRMDB.PageParameters.new_room_booking.nb_children" data-frmdb-value="$FRMDB.PageParameters.new_room_booking.nb_children">
                                     </div>
                                 </div>
                             </div>
@@ -85,9 +85,9 @@
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
                 <div class="card-deck frmdb-cards-3">
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~07-Ball">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/room4\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture" data-frmdb-pending=""></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/room4\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
                         <div class="card-body">
-                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Ball Room</h5>
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Ball Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
@@ -101,9 +101,9 @@
                         </frmdb-t-card-note>
                     </frmdb-t-card-media-main>
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~06-Conference">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/facilites_bg\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture" data-frmdb-pending=""></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/facilites_bg\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
                         <div class="card-body">
-                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Conference Room</h5>
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Conference Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
@@ -117,9 +117,9 @@
                         </frmdb-t-card-note>
                     </frmdb-t-card-media-main>
                     <frmdb-t-card-media-main class="" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[]" data-frmdb-record="Room_Type~~05-EconomySigle">
-                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/bedroom-1872196_1920\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture" data-frmdb-pending=""></frmdb-t-img>
+                        <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img:url(\/formuladb-env\/frmdb-apps\/hotel-booking\/static\/bedroom-1872196_1920\.jpg);" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].picture"></frmdb-t-img>
                         <div class="card-body">
-                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name" data-frmdb-pending="">Economy Sigle</h5>
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.Room_Type[].name">Economy Sigle</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
